# audio-visualizer

./: .gitmodules  CMakeLists.txt
fft/: CMakeLists.txt
fft/benchmarks/: bench_dft.c  bench_fft.c  bench_rfft.c
fft/include/: fft.h
fft/src/: dft.c  fft.c  rfft.c
fft/tests/: test_fft.c
include/: app_state.h  audio_utils.h  gui.h  player.h  visualizer.h  window_utils.h
src/: app_state.c  audio_utils.c  gui.c  main.c  player.c  visualizer.c  window_utils.c
